[gd_scene load_steps=5 format=3 uid="uid://cvdnf5s6m8kqh"]

[ext_resource type="Script" path="res://scripts/enemies/EnemySpider.gd" id="1_enemyspider"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(32, 32)

[node name="EnemySpider" type="CharacterBody2D"]
script = ExtResource("1_enemyspider")

[node name="EnemyRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.5, 0.2, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2")

[node name="MoveTimer" type="Timer" parent="."]

[node name="HealthLabel" type="Label" parent="."]
offset_left = -15.0
offset_top = -35.0
offset_right = 15.0
offset_bottom = -15.0
text = "30"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"] 